Now able to get all projects from workspace. Also fixed project tests.
