# src/api/projects/projectsModel.ts
@@ -30,23 +30,28 @@ export const ProjectValidator = z.object({
   ownerId: z.string(),
   clientId: z.string().nullish(),
   description: z.string().optional(),
-  lumpSum: z.number().nullish(),
-  monthlyPay: z.number().nonnegative().nullish(),
   priority: z.enum(["None", "Low", "Medium", "High"]),
-  order: z.number().nonnegative().nullish(),
-  iconColor: Color.nullish(),
   startDate: z.date().nullish(),
   dueDate: z.date().nullish(),
+  monthlyPay: z.number().nonnegative().nullish(),
+  lumpSum: z.number().nullish(),
+
+  // These properties are generated in backend
+  iconColor: Color.nullish(),
+  order: z.number().nonnegative().nullish(),
   createdAt: z.date().nullish(),
   updatedAt: z.date().nullish(),
-
   // Commented all schemas that z.array()
-  // These don't because encapsulating schemas don't work
+  // These are commented out because encapsulating schemas don't work
   // sections: z.array(SectionProjectValidator).optional(),
   // notes: z.array(z.object({})).optional(),
   // sketches: z.array(z.object({})).optional(),
   // members: z.array(UserValidator).optional(),
   // inviteLinks: z.array(z.object({})).optional(),
+});
+
+export const ProjectQueryValidator = z.object({
+  workspaceId: z.string(),
 });
 
 export type Project = z.infer<typeof ProjectValidator>;
